--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Călătorind prin lume</h1>
-      <h2>Pasionați de locurile frumoase ale României</h2>
+      <h2>Pasionați de locurile frumoase</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
