--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <main id="main">
 
     <!-- ======= About Me Section ======= -->
-    <section id="about" class="about">
+    <section id="despre" class="despre">
       <div class="container">
 
         <div class="section-title">
