--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Experiențele mele</span>
-          <h2>Experiențele mele</h2>
+          <span>Despre mine</span>
+          <h2>Despre mine</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
