--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
-        <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
-        <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto active" href="#hero">Acasă</a></li>
+        <li><a class="nav-link scrollto" href="#about">Despre</a></li>
+        <li><a class="nav-link scrollto" href="#resume">Resurse</a></li>
+        <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
+        <li><a class="nav-link scrollto " href="#portfolio">Portofoliu</a></li>
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
