--- a/index.html
+++ b/index.html
@@ -362,14 +362,14 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= My Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!-- ======= Portofoliul meu Section ======= -->
+    <section id="Potofoliul meu" class="Portofoliul meu">
       <div class="container">
 
         <div class="section-title">
-          <span>My Portfolio</span>
-          <h2>My Portfolio</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Potofoliul meu</span>
+          <h2>Potofoliul meu</h2>
+          <p>Poti explora amintirile create in experientele mele</p>
         </div>
 
         
@@ -377,7 +377,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="https://i.pinimg.com/originals/3e/2e/8c/3e2e8c6fa626636eb4e8bdfe78edab3b.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>App 1</h4>
               <p>App</p>
