--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Acasă</a></li>
         <li><a class="nav-link scrollto" href="#about">Despre</a></li>
-        <li><a class="nav-link scrollto" href="#resume">Resurse</a></li>
+        <li><a class="nav-link scrollto" href="#resume">experienta</a></li>
         <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Portofoliu</a></li>
 
@@ -162,7 +162,7 @@
       </div>
     </section><!-- End About Me Section -->
 
-    <!-- ======= My Resume Section ======= -->
+    <!-- ======= Experienta Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
 
