--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </section><!-- End About Me Section -->
 
     <!-- ======= Experienta Section ======= -->
-    <section id="resume" class="resume">
+    <section id="experienta" class="experienta">
       <div class="container">
 
         <div class="section-title">
