--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="section-title">
           <span>Experienta</span>
           <h2>Experienta</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>anii de fotografie mi au oferit o experienta vasta in domeniu, iar astazi sunt freelencer</p>
         </div>
 
         <div class="row">
@@ -235,14 +235,14 @@
       </div>
     </section><!-- End My Resume Section -->
 
-    <!-- ======= My Services Section ======= -->
-    <section id="services" class="services">
+    <!-- ======= Servicii Section ======= -->
+    <section id="Servicii" class="Servicii">
       <div class="container">
 
         <div class="section-title">
-          <span>My Services</span>
-          <h2>My Services</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Servicii</span>
+          <h2>Servicii</h2>
+          <p>Am dezvoltat pachete pentru nevoile tale!</p>
         </div>
 
         <div class="row">
@@ -471,13 +471,13 @@
       </div>
     </section><!-- End My Portfolio Section -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <!-- ======= Preturi Section ======= -->
+    <section id="Preturi" class="Preturi">
       <div class="container">
 
         <div class="section-title">
-          <span>Pricing</span>
-          <h2>Pricing</h2>
+          <span>Preturi</span>
+          <h2>Preturi</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
