--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Acasă</a></li>
         <li><a class="nav-link scrollto" href="#about">Despre</a></li>
-        <li><a class="nav-link scrollto" href="#resume">experienta</a></li>
+        <li><a class="nav-link scrollto" href="#resume">Experienta</a></li>
         <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Portofoliu</a></li>
 
@@ -66,8 +66,8 @@
 
   <main id="main">
 
-    <!-- ======= About Me Section ======= -->
-    <section id="despre" class="despre">
+    <!-- ======= Despre mine Section ======= -->
+    <section id="despre mine" class="despre mine">
       <div class="container">
 
         <div class="section-title">
