--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <main id="main">
 
     <!-- ======= Despre mine Section ======= -->
-    <section id="despre mine" class="despre mine">
+    <section id="about" class="about">
       <div class="container">
 
         <div class="section-title">
@@ -163,7 +163,7 @@
     </section><!-- End About Me Section -->
 
     <!-- ======= Experienta Section ======= -->
-    <section id="Experienta" class="Experienta">
+    <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
@@ -236,7 +236,7 @@
     </section><!-- End My Resume Section -->
 
     <!-- ======= Servicii Section ======= -->
-    <section id="Servicii" class="Servicii">
+    <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -363,7 +363,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Portofoliul meu Section ======= -->
-    <section id="Potofoliul meu" class="Portofoliul meu">
+    <section id="portofolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
@@ -472,7 +472,7 @@
     </section><!-- End My Portfolio Section -->
 
     <!-- ======= Preturi Section ======= -->
-    <section id="Preturi" class="Preturi">
+    <section id="pricing" class="pricing">
       <div class="container">
 
         <div class="section-title">
