--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Fotograful tău perfect</h1>
-      <h2>Surprinde cele mai frumoase momente</h2>
+      <h1>Rotund perfect</h1>
+      <h2>Surprinde cele mai frumoase momente alaturi de noi!</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
