--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Acasă</a></li>
-        <li><a class="nav-link scrollto" href="#Despre">Despre</a></li>
-        <li><a class="nav-link scrollto" href="#Experienta">Experienta</a></li>
-        <li><a class="nav-link scrollto" href="#Servicii">Servicii</a></li>
-        <li><a class="nav-link scrollto " href="#Portofoliu">Portofoliu</a></li>
+        <li><a class="nav-link scrollto" href="#about">Despre</a></li>
+        <li><a class="nav-link scrollto" href="#resume">Experienta</a></li>
+        <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
+        <li><a class="nav-link scrollto " href="#portofolio">Portofoliu</a></li>
 
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
