--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="section-title">
           <span>Despre mine</span>
           <h2>Despre mine</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Suntem pasionati de munte si de amintirile tale</p>
         </div>
 
         <div class="row">
@@ -83,18 +83,18 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Laura Thomso</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Raluca & Florin</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.rotund-perfect.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+4077127442</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cluj-Napoca, Romania</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rotund@perfect.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>ON</span></li>
                   </ul>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                   <div class="count-box">
                     <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <p><strong>Happy Clients</strong> Care s-au bucurat de amintirile create de noi</p>
                   </div>
                 </div>
 
@@ -111,7 +111,7 @@
                   <div class="count-box">
                     <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                    <p><strong>Projects</strong> Derulate de-a lungul carierei noastre</p>
                   </div>
                 </div>
 
@@ -119,7 +119,7 @@
                   <div class="count-box">
                     <i class="bi bi-clock" style="color: #2cbdee;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                    <p><strong>Years of experience</strong> Alaturi de oameni minunati</p>
                   </div>
                 </div>
 
@@ -127,7 +127,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #ffb459;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <p><strong>Awards</strong> Care ne au ridicat standardele de calitate in materie de fotografie</p>
                   </div>
                 </div>
               </div>
