--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Despre mine</span>
-          <h2>Despre mine</h2>
+          <span>Despre noi</span>
+          <h2>Despre noi</h2>
           <p>Suntem pasionati de munte si de amintirile tale</p>
         </div>
 
