--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Potofoliul meu</span>
-          <h2>Potofoliul meu</h2>
-          <p>Poti explora amintirile create in experientele mele</p>
+          <span>Potofoliul nostru</span>
+          <h2>Potofoliul nostru</h2>
+          <p>Poti explora amintirile create in experientele noastre</p>
         </div>
 
         
@@ -411,17 +411,17 @@
             <div class="portfolio-info">
               <h4>Evenimente</h4>
               <p>nunta 2021</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <a href="https://i.pinimg.com/474x/8b/be/57/8bbe57a06d7db2a6b19c174cb125d91d.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Timișoara"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="https://images.squarespace-cdn.com/content/v1/5769ea6c8419c279f6d91411/1670960317758-7G8Z1TNTDSBBTQ7T2C17/Screenshot+2022-12-13+at+2.33.46+PM.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+              <h4>Evenimente</h4>
+              <p>nunta 2021</p>
+              <a href="https://images.squarespace-cdn.com/content/v1/5769ea6c8419c279f6d91411/1670960317758-7G8Z1TNTDSBBTQ7T2C17/Screenshot+2022-12-13+at+2.33.46+PM.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Grecia"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
