--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <div class="portfolio-info">
               <h4>Evenimente</h4>
               <p>Nunta 2019</p>
-              <a href="https://i.pinimg.com/736x/13/4a/7b/134a7b3a0fa39c6edbb29cddbf8ce002.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Greica"><i class="bx bx-plus"></i></a>
+              <a href="https://i.pinimg.com/736x/13/4a/7b/134a7b3a0fa39c6edbb29cddbf8ce002.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Grecia"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
