--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div class="count-box">
                     <i class="bi bi-emoji-smile" style="color: #558422;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> Care s-au bucurat de amintirile create de noi</p>
+                    <p><strong>de clienți fericiți</strong> care s-au bucurat de amintirile create de noi</p>
                   </div>
                 </div>
 
@@ -111,7 +111,7 @@
                   <div class="count-box">
                     <i class="bi bi-journal-richtextr" style="color: #558422;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> Derulate de-a lungul carierei noastre</p>
+                    <p><strong>de proiecte</strong> derulate de-a lungul carierei noastre</p>
                   </div>
                 </div>
 
@@ -119,7 +119,7 @@
                   <div class="count-box">
                     <i class="bi bi-clock" style="color: #558422;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> Alături de oameni minunați</p>
+                    <p><strong>ani de experiență</strong> alături de oameni minunați</p>
                   </div>
                 </div>
 
@@ -127,7 +127,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #558422;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> Care ne au ridicat standardele de calitate în materie de fotografie</p>
+                    <p><strong>de premii</strong> care ne au ridicat standardele de calitate în materie de fotografie</p>
                   </div>
                 </div>
               </div>
