--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="https://img.freepik.com/free-photo/blond-model-wedding-dress-bridal-makeup_114579-8627.jpg?w=2000" class="testimonial-img" alt="">
                 <h3>Anais Elisabeth</h3>
                 <h4>Client</h4>
                 <p>
@@ -346,7 +346,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h4>Antrepenor</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Primele vizualuri ale companiei mele au fost realizate alături de Raluca și Florin. Mă bucur că v-am cunoscut!
