--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #558422;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>de premii</strong> care ne au ridicat standardele de calitate în materie de fotografie</p>
+                    <p><strong>premii</strong> care ne au ridicat standardele de calitate în materie de fotografie</p>
                   </div>
                 </div>
               </div>
