--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="https://img.freepik.com/free-photo/blond-model-wedding-dress-bridal-makeup_114579-8627.jpg?w=2000" class="testimonial-img" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0270/7819/7335/products/LJRBridalModelSquare-26_1024x1024@2x.jpg?v=1641120197" class="testimonial-img" alt="">
                 <h3>Anais Elisabeth</h3>
                 <h4>Client</h4>
                 <p>
