--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Raluca & Florin</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Nume:</strong> <span>Raluca & Florin</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.rotund-perfect.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+4077127442</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cluj-Napoca, Romania</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Telefon:</strong> <span>+4077127442</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Oraș:</strong> <span>Cluj-Napoca, Romania</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Vârstă:</strong> <span>30</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Educație:</strong> <span>Master</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rotund@perfect.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>ON</span></li>
                   </ul>
