--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <h4>Client</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Mândră de alegerea de a-i avea pe cei doi ca modelatori ale amintirilor în ziua nunții! Vă mulțumim! 
+                  Mândră de alegerea de a-i avea pe cei doi ca modelatori ai amintirilor în ziua nunții! Vă mulțumim! 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
