--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="section-title">
           <span>Potofoliul nostru</span>
           <h2>Potofoliul nostru</h2>
-          <p>Poți explora amintirile create în experiențele noastre</p>
+          <p>Poți explora amintirile create de-a lungul experiențelor noastre</p>
         </div>
 
         
