--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Contact Me</span>
-          <h2>Contact Me</h2>
+          <span>Contactează-ne</span>
+          <h2>Contactează-ne</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
@@ -588,15 +588,15 @@
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
-                  <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <h3>E-mail</h3>
+                  <p>rotund@perfect.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
-                  <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Sună</h3>
+                  <p>+40771273442</p>
                 </div>
               </div>
             </div>
