--- a/index.html
+++ b/index.html
@@ -202,30 +202,30 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Our Photo Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4>Freelenceri</h4>
               <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Romania </em></p>
               <p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>De 4 ani am capturat momentele speciale din zilele importante ale clientilor nostri</li>
+                <li>Lucram materiale foto si video</li>
+                <li>Cream pachete personalizate special pentru tine</li>
+                <li>Fotografia este meseria noastre preferata, urmata de explorarea muntilor</li>
               </ul>
               </p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
+              <h4>Photography specialist</h4>
               <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Romania</em></p>
               <p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Am lucrat pentru branduri renumite ca Zara, Mohito si Lidl</li>
+                <li>Am invatat in cadrul conferintelor de la fotografi renumiti ca Jimmy Nelson</li>
+                <li>Am elaborat proiecte derulate international</li>
+                <li>Clientiilor cu care am lucrat le am oferit un input creativ, ajutor in atragerea de clienti</li>
               </ul>
               </p>
             </div>
@@ -250,7 +250,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Evenimente personale</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Capturam impreuna momentele tale, atat foto cat si video, pornind de la sedinte personale de maternitate, pana la evenimente precum nunti, botezuri sau zile de nastere</p>
             </div>
           </div>
 
@@ -258,7 +258,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Evenimente corporate</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Intalnirile de afaceri pot fi surprinse intr-un mod in care profesionalismul si seriozitatea sunt combinate cu arta fotografica</p>
             </div>
           </div>
 
@@ -266,7 +266,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Fotografie de produs</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Vrei sa promovezi, sa postezi si/sau sa vinzi produse? Facem si asta! Mai mult de atat, aducem si idei de montaj, daca asta este ceea ce iti doresti</p>
             </div>
           </div>
 
@@ -274,7 +274,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Studio</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Daca ai nevoie de un studio foto, te asteptam sa ne cunoastem si sa tranformam impreuna fiecare moment, intr-o fotografie valoroasa</p>
             </div>
           </div>
 
@@ -486,11 +486,11 @@
           <div class="col-lg-3 col-md-6">
             <div class="box">
               <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h4><sup>$</sup>0<span> / 1 h </span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
+                <li>Consultanta</li>
+                <li>Recomandari</li>
+                <li>Trial</li>
                 <li class="na">Pharetra massa</li>
                 <li class="na">Massa ultricies mi</li>
               </ul>
@@ -503,12 +503,12 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>$</sup>50<span> / 1 h</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
+                <li>Foto-Video</li>
+                <li>Editare</li>
+                <li>Livrabile pregatite pentru social media</li>
+                <li>Consultanta</li>
                 <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
@@ -520,13 +520,13 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h4><sup>$</sup>29<span> / 1 h</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Evenimente personale</li>
+                <li>Consultanta</li>
+                <li>Foto-video</li>
+                <li>Editare</li>
+                <li>Creare album</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -538,13 +538,13 @@
             <div class="box">
               <span class="advanced">Advanced</span>
               <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
+              <h4><sup>$</sup>180<span> / 12 h</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Fotografie de produs</li>
+                <li>Studio asigurat</li>
+                <li>Montaj asigurat</li>
+                <li>Decor</li>
+                <li>Consultanta</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
