--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <div class="section-title">
           <span>Preturi</span>
           <h2>Preturi</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Selecteaza modul in care vrei sa iti surprinzi evenimentele </p>
         </div>
 
         <div class="row">
