--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Rotund perfect</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>SURPRINDE CELE MAI FRUMOASE MOMENTE ALĂTURI DE NOI!</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
