--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         <div class="section-title">
           <span>Contactează-ne</span>
           <h2>Contactează-ne</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Suntem alaturi de tine</p>
         </div>
 
         <div class="row">
