--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
                 <li>Consultanta</li>
                 <li>Recomandari</li>
                 <li>Trial</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li class="na"> </li>
+                <li class="na"> </li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
