--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 <li>Editare</li>
                 <li>Livrabile pregatite pentru social media</li>
                 <li>Consultanta</li>
-                <li class="na">Massa ultricies mi</li>
+                <li class="na"> </li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
