--- a/index.html
+++ b/index.html
@@ -639,11 +639,8 @@
       <h3>Rotund perfect</h3>
       <p>SURPRINDE CELE MAI FRUMOASE MOMENTE ALĂTURI DE NOI!</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="facebook"><i class="https://www.facebook.com/rotundperfect/"></i></a>
+        <a href="#" class="instagram"><i class="https://www.instagram.com/rotundperfect/"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Rotund Perfect</span></strong>. All Rights Reserved
