--- a/index.html
+++ b/index.html
@@ -575,10 +575,8 @@
               <div class="col-md-12">
                 <div class="info-box">
                   <i class="bx bx-share-alt"></i>
-                  <h3>Social Profiles</h3>
+                  <h3>Hai sa ne cunoastem pe Strada Frumoasa 7, Bucuresti, parter</h3>
                   <div class="social-links">
-                    <a href="#" class="facebook"><i class="https://www.facebook.com/rotundperfect/"></i></a>
-                    <a href="#" class="instagram"><i class="https://www.instagram.com/rotundperfect/"></i></a>
                 
                   </div>
                 </div>
