--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <h4>Portret</h4>
               <p>de toamna</p>
               <a href="https://i.pinimg.com/originals/3e/2e/8c/3e2e8c6fa626636eb4e8bdfe78edab3b.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Loredana"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"></a>
             </div>
           </div>
 
