--- a/index.html
+++ b/index.html
@@ -567,6 +567,11 @@
           <p>Suntem alaturi de tine</p>
         </div>
 
+<div data-aos="fade-up">
+  <iframe src="ttps://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2848.2353745618093!2d26.084334000000002!3d44.44884460000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b201fe0151d571%3A0x9d6ba795d3a6d89a!2sStrada%20Frumoas%C4%83%207%2C%20Bucure%C8%99ti!5e0!3m2!1sro!2sro!4v1685014514542!5m2!1sro!2sro" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
+
         <div class="row">
 
           <div class="col-lg-6">
